test/fail_compilation/objc/objc_interface1.d
// PLATFORM: osx

interface A {
	void oneTwo(int a, int b) [one:two:]; // selector attached in non-Objective-C interface
}
